--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -1,3 +1,7 @@
+@import "partials/headers";
+@import "partials/footer";
+
+
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap');
 *{
     margin: 0;
@@ -11,8 +15,7 @@
     text-align: center;
 }
 a{
-    color: red;
-    
+    color: red;   
 }
 body {
     text-align: center;
@@ -30,10 +33,6 @@ form {
 }
 .texto{
     border: 1px solid black;
-}
-.footer{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: large;
 }
 .shop{
     height: 100px;
