--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,4 +1,4 @@
-.footer{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: large;
-}
+@import "../variables/variables";
+@import "../sass2/extend";
+@import "../sass2/mixins";
+
