--- a/css/prueba.css
+++ b/css/prueba.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap");
-.footer {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: large; }
+h1 {
+  color: #e78f8f;
+  width: 100%; }
 
 * {
   margin: 0;
@@ -15,7 +15,7 @@
   text-align: center; }
 
 a {
-  color: red; }
+  color: #e78f8f; }
 
 body {
   text-align: center; }
