--- a/css/prueba.css
+++ b/css/prueba.css
@@ -3,13 +3,39 @@ h1 {
   color: #e78f8f;
   width: 100%; }
 
+form {
+  display: inline-block;
+  width: 450px;
+  margin: auto;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 10px 20px;
+  box-sizing: border-box;
+  margin-top: 25px;
+  border-radius: 8px; }
+
 * {
   margin: 0;
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif;
   font-style: none;
-  text-decoration: none;
-  background-image: url(../Imagenes/Fondo1.jpg); }
+  text-decoration: none; }
+
+nav {
+  background: #217E90;
+  height: 80px;
+  width: 100%; }
+
+.logo {
+  color: white;
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+  float: left; }
+
+nav ul {
+  float: right;
+  margin-right: 20px; }
 
 .lista {
   text-align: center; }
@@ -18,10 +44,47 @@ a {
   color: #e78f8f; }
 
 body {
-  text-align: center; }
+  min-height: 100vh;
+  text-align: center;
+  position: relative;
+  padding-bottom: 2em;
+  background-image: url(../Imagenes/Fondo1.jpg);
+  background-size: width 100%;
+  background-size: height 100%;
+  background-attachment: fixed; }
 
 form {
-  display: inline-block; }
+  display: inline-block;
+  width: 450px;
+  margin: auto;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 10px 20px;
+  box-sizing: border-box;
+  margin-top: 25px;
+  border-radius: 8px; }
+
+input, textarea {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 8px;
+  box-sizing: border-box;
+  border: none; }
+
+textarea {
+  min-height: 100px;
+  max-height: 200px;
+  max-width: 100%; }
+
+@media (max-width: 480px) {
+  form {
+    width: 100%; } }
+
+.coment {
+  color: white;
+  text-align: center;
+  margin: 0;
+  font-size: 30px;
+  margin-bottom: 20px; }
 
 .div-main {
   text-align: center;
