--- a/scss/sass2/_mixins.scss
+++ b/scss/sass2/_mixins.scss
@@ -6,5 +6,29 @@
     font-family: 'Source Sans Pro', sans-serif;
     font-style: none;
     text-decoration: none;
+}
+
+@mixin fondo {
     background-image: url(../Imagenes/Fondo1.jpg); 
+    background-size: width 100%;
+    background-size: height 100%;
+    background-attachment: fixed;
+}
+
+@mixin form {
+    width: 450px;
+    margin: auto;
+    background: rgba(0,0,0,0.4);
+    padding: 10px 20px;
+    box-sizing: border-box;
+    margin-top: 25px;
+    border-radius: 8px;
+}
+
+@mixin titulo {
+    color: white;
+    text-align: center;
+    margin: 0;
+    font-size: 30px;
+    margin-bottom: 20px;
 }
